# plot

./: .Fit_All_Angle_Par_cp.C.swp  .Fit_DigiEnergy.C.swp  .Fit_DigiEnergy_compare.C.swp  .Fit_Read_Par_cp.C.swp  .Fit_Read_Par_one.C.swp  .Fit_Resolution_mpi0.C.swp  .Fit_Resolution_range.C.swp  .NEW_Algorithm.C.swp  .Shower_instance.C.swp  .Shower_instance_mpi0.C.swp  .Shower_instance_test1.C.swp  .Shower_match.C.swp  ._.gitignore  ._CMakeLists.txt  ._Energy_Bump.C  ._Energy_Bump_3D.C  ._Energy_Bump_v1.C  ._Energy_Bump_v2.C  ._Energy_Cluster.C  ._Energy_Compare.C  ._Energy_Compare_new.C  ._Energy_Compare_t.C  ._Energy_MCTruth.C  ._Energy_MCTruth_v1.C  ._Energy_MCTruth_v2.C  ._MC.C  ._MC_backup1.C  ._MC_backup2.C  ._MC_backup3.C  ._MC_backup4.C  ._MC_backup5.C  ._MC_backup6.C  ._MC_backup7.C  ._MC_backup8.C  ._README.md  ._ReadHit_v1.C  ._ReadHit_v2.C  ._ReadHit_v3.C  ._ReadHit_v4.C  ._ReadHit_v5.C  (+332 more)
0.5G_out/: out1.txt  out2.txt
Backup/: ReadMCTrack_cluster.C  ReadMCTrack_hit.C
ReadFairLink/: ._ReadFairLink.C  ._ReadFairLink_cluster.C  ._ReadFairLink_digi.C  ._ReadFairLink_hit.C  ._ReadFairLink_point.C  ._cluster_links.txt  ._hit_links.txt  ReadFairLink.C  ReadFairLink_cluster.C  ReadFairLink_digi.C  ReadFairLink_hit.C  ReadFairLink_point.C  ReadFairLink_point_io.C  cluster_links.txt  hit_links.txt  point_links.txt
S/: ._ReadAllTruthAndLater.C  ._ReadBump.C  ._ReadMCTrack.C  ._ReadMCTrack2.C  ._plot1.C  ._plot2.C  ._plot6.C  ReadBump.C  ReadMCTrack.C  ReadMCTrack2.C  plot2.C
doc/: A10_par_cp.txt  A11_par_cp.txt  A12_par_cp.txt  A13_par_cp.txt  A14_par_cp.txt  (+946 more)
(+22 files in other folders)
