cmake_minimum_required(VERSION 2.8)
project(plot C)
set(CMAKE_C_STANDARD 99)
set(SOURCE_FILES ${PROJECT_SOURCE_DIR}/*.C)
set(INC_DIR $ENV{PANDA_DIR}/PandaRoot/install/include/)
set(LINK_DIR $ENV{PANDA_DIR}/PandaRoot/install/lib)
include_directories(${INC_DIR})
link_directories(${LINK_DIR})
add_executable(plot ${SOURCE_FILES})
target_link_libraries(plot ${LINK_DIR})
